src/App.scss
@import url("https://fonts.googleapis.com/css?family=Roboto:400,700,900");

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
  line-height: 1;
  font-family: "Roboto", sans-serif;
  color: #202020;
}

ul {
  margin: 0;
  padding: 0;
}

//variables
$generic-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 0px 1px,
  rgba(0, 0, 0, 0.1) 0px 4px 11px;
$generic-border: 1px solid #f1f1f1;
$generic-bg: #db4c3f;

//mixins
@mixin box-overlay() {
  box-shadow: $generic-box-shadow;
  position: absolute;
  width: 100%;
  z-index: 1;
  top: 85px;
  border-radius: 3px;
}

@mixin va($va-align: center) {
  display: flex;
  align-items: center;

  @if $va-align != center {
    justify-content: left;
  } @else {
    justify-content: center;
  }
}

@mixin no-select {
  -webkit-touch-callout: none;
  -webkit-user-select: none; /* Safari 3.1+ */
  -khtml-user-select: none;
  -moz-user-select: none; /* Firefox 2+ */
  -ms-user-select: none; /* IE 10+ */
  user-select: none; /* Standard syntax */
}

@mixin btn($width) {
  width: $width;
  background-color: $generic-bg;
  color: #fff !important;
  border: 1px solid transparent;
  margin-right: 5px;
  margin-top: 10px;
  font-weight: bold;
  font-size: 13px !important;
  line-height: 17px;
  padding: 6px 12px 7px 12px;
  position: relative;
  display: inline-block;
  white-space: nowrap;
  border-radius: 3px !important;
  text-decoration: none !important;
  text-align: center;
  cursor: pointer;
}

@mixin cancel() {
  color: #555;
  cursor: pointer;
  font-size: 14px;
  margin: 2px 5px;
}

@mixin task-item() {
  list-style-type: none;
  display: flex;
  line-height: 18px;
  color: #333;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 14px;
  list-style-type: none;
  border-bottom: 1px solid #f0f0f0;
  padding-left: 10px;
  cursor: pointer;

  &:hover {
    background-color: #f9f9f9;
  }
}

@mixin mq($from) {
  @media (max-width: $from) {
    @content;
  }
}

.darkmode {
  header {
    -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
    box-shadow: 0 1px 3px 3px 0 rgba(0, 0, 0, 0.15);
    background-color: #282828;
    border-color: transparent;
  }
}

header {
  border-bottom: solid 1px #ca2100;
  background-color: $generic-bg;
  transition: height 200ms ease-in;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  height: 44px;
  z-index: 400;
  position: fixed;
  top: 0;
  width: 100%;

  @include mq("900px") {
    padding: 0 10px;
  }

  nav {
    display: grid;
    align-items: center;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    max-width: 922px;
    margin: auto;
    height: 44px;

    p,
    li {
      color: white;
    }

    div {
      &.logo {
        padding-left: 8px;
        grid-area: 1/1;
      }

      img {
        width: 24px;
      }

      &.settings {
        grid-area: 1/2;
        text-align: right;

        ul {
          float: right;

          li {
            @include va;

            list-style-type: none;
            cursor: pointer;
            width: 30px;
            height: 30px;
            text-align: center;
            vertical-align: middle;
            float: left;

            &:hover {
              border-radius: 3px;
              background-color: rgba(255, 255, 255, 0.2);
            }

            &.settings__add {
              margin-right: 15px;
              font-size: 30px;
            }

            &.settings__dark-mode svg {
              width: 20px;
              height: 20px;
            }
          }
        }
      }
    }
  }
}

.sidebar {
  @include no-select();

  width: 266px;
  height: calc(100vh);
  padding-top: 64px;
  position: fixed;
  overflow-x: hidden;
  overflow-y: hidden;
  border-right: $generic-border;
  background-color: #fafafa;

  @include mq("900px") {
    display: none;
  }

  li {
    padding-left: 10px;
    padding-right: 15px;

    &:hover .sidebar__project-delete {
      display: block;
    }
  }

  &__project {
    padding: 5px 0;
    cursor: pointer;

    &-delete {
      margin-left: auto;
      display: none;

      svg {
        color: #cacaca;
      }
    }

    &.active,
    &:hover {
      font-weight: bold;
      background-color: white;
    }

    &:nth-child(1) {
      .sidebar__dot {
        color: #6accbc;
      }
    }

    &:nth-child(2) {
      .sidebar__dot {
        color: #fad003;
      }
    }

    &:nth-child(3) {
      .sidebar__dot {
        color: #ff8d85;
      }
    }

    &:nth-child(4) {
      .sidebar__dot {
        color: #ff9932;
      }
    }

    &:nth-child(5) {
      .sidebar__dot {
        color: #af38eb;
      }
    }
  }

  &__projects {
    padding-left: 3px;
  }

  &__project {
    @include va("left");
  }

  &__dot {
    margin-right: 10px;
    font-size: 30px;
  }

  &__middle {
    margin-top: 20px;
    margin-bottom: 20px;
    display: flex;
    border-bottom: $generic-border;
    padding-left: 10px;
    cursor: pointer;

    span {
      color: #0000008a;
      margin-right: 10px;

      svg.hidden-projects {
        transform: rotate(-90deg);
      }
    }

    h2 {
      margin: 0;
      color: #333;
      font-size: 15px;
      font-weight: bold;
      padding-bottom: 20px;
    }
  }

  &__generic {
    li {
      padding: 10px 0 10px 10px;
      list-style-type: none;
      color: #333;
      display: flex;
      cursor: pointer;
      line-height: 1.5;
      font-size: 15px;

      span:first-of-type {
        margin-right: 10px;

        svg {
          width: 18px;
          height: 18px;
          color: #555;
        }
      }
      &.active,
      &:hover {
        font-weight: bold;
        background-color: white;
      }
    }
  }
}

.project-delete-modal {
  position: relative;

  &__inner {
    @include box-overlay();
    z-index: 99;
    width: 200px;
    padding: 10px;
    top: 10px;
    right: 0;
    background-color: white;

    p {
      margin-top: 5px;
      margin-bottom: 5px;
      line-height: normal;
      font-weight: normal;
      font-size: 15px;
    }

    button {
      @include btn("50px");
    }

    span {
      @include cancel();
      font-weight: normal;
    }
  }
}

.content {
  display: grid;
  align-items: center;
  grid-template-columns: 1fr auto;
  max-width: 922px;
  margin: auto;
}

.tasks {
  width: 656px;
  background-color: white;
  margin-left: 266px;
  border-right: $generic-border;
  min-height: calc(100vh);
  vertical-align: top;
  padding: 80px 40px 84px;

  @include mq("900px") {
    margin-left: 0;
    width: auto;
  }

  h2 {
    font-size: 20px;
    font-weight: normal;
    margin: 0 30px 20px 0;
  }

  .add-task {
    margin-top: 20px;
  }

  &__list li {
    display: flex;
    line-height: 18px;
    color: #333;
    padding-top: 10px;
    padding-bottom: 10px;
    font-size: 14px;
    list-style-type: none;
    border-bottom: 1px solid #f0f0f0;

    .checkbox-holder {
      margin-right: 20px;
      display: flex;
      align-items: center;
      justify-content: center;
      line-height: 16px;

      .checkbox {
        cursor: pointer;
        border-color: gray;
        color: #343434;
        height: 16px;
        width: 16px;
        border: 1px solid gray;
        border-radius: 16px;
      }
    }
  }
}

.add-project {
  padding-left: 13px;
  padding-right: 20px;
  margin-top: 20px;

  &__input {
    margin-bottom: 20px;
  }

  &__name {
    width: 100%;
    border: 1px solid black;
    background-color: white !important;
    border-radius: 3px;
    height: 35px;
    padding-left: 10px;
    padding-right: 10px;
  }

  &__submit {
    @include btn(100px);
  }

  &__cancel {
    @include cancel();
  }
}

.add-task {
  &__overlay {
    background: rgba(102, 102, 102, 0.5);
    position: absolute;
    margin: auto;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 200;
    transition: opacity 0.2s ease-in;
    height: calc(100vh);

    .add-task__main {
      overflow: visible;
      margin-bottom: 20px;
      margin-top: 55px;
      border-radius: 5px;
      background-color: white;
      position: absolute;
      left: 50%;
      top: 50%;
      padding: 20px 30px;
      transform: translate(-50%, -50%);

      .header {
        font-size: 13px;
        margin-bottom: 20px;
        float: left;
      }
    }

    .add-task__cancel-x {
      cursor: pointer;
      color: gray;
      float: right;
      font-weight: bold;
      font-size: 12px;
      margin-top: 10px;
    }
  }

  &__main {
    position: relative;
  }

  &__project,
  &__date {
    cursor: pointer;
    float: right;
    color: gray;
    margin: 20px 10px;
  }

  &__project {
    margin-right: 0;
  }

  &__content {
    width: 100%;
    border: 1px solid #ddd;
    background-color: white !important;
    border-radius: 2px;
    height: 35px;
    padding-left: 10px;
    padding-right: 10px;
  }

  &__cancel,
  &__submit {
    @include no-select;
  }

  &__cancel {
    @include cancel();
  }

  &__submit {
    @include btn(90px);
  }
}

.add-task__shallow,
.add-project {
  color: #dd4b39;
  font-size: 18px;
}

.add-task__text,
.add-project__text {
  display: inline-block;
  color: #545454;
  font-size: 14px;
  margin-left: 15px;
}

.add-task__plus,
.add-project__plus {
  color: #dd4b39;
  font-size: 18px;
}

.task-date {
  @include box-overlay();

  background-color: #fff;
  width: 200px;
  right: 0;

  &__list li {
    @include task-item();

    span:first-of-type {
      margin-right: 10px;

      svg {
        fill: grey;
      }
    }
  }
}

.project-overlay {
  @include box-overlay();
  background-color: white;

  &__list li {
    @include task-item();
  }
}

